Bugfix /tourguide/TestPerformance.java,tourguide/TestRewardsService.java,/tourguide/TestTourGuideService.java